testsuite/tests/interpreter_errors/call_property_wrong_type/test.out
main.adb

Error: Cannot convert a KIND_INT to a BOOLEAN_VALUE

print(names[1].referenced_decl(1))
               ^^^^^^^^^^^^^^^^   

